change title when target attribute classic

--- a/index.html
+++ b/index.html
@@ -147,10 +147,16 @@
                             <div class="campaign_inner">
                                 <!-- left -->
                                 <div class="side side_left pc-only" data-side-left>
-                                    <div class="side_heading">
+                                    <div class="side_heading" data-heading-default>
                                         <a href="https://www.shipsltd.co.jp/label/shipsforwomen/">
                                             <p>SHIPS for WOMEN 2025 Autumn</p>
                                             <h2>That Lady</h2>
+                                        </a>
+                                    </div>
+                                    <div class="side_heading" style="display: none;" data-heading-classic>
+                                        <a href="https://www.shipsltd.co.jp/label/shipsprimarynavylabel/">
+                                            <p>SHIPS Primary Navy Label 2025 Autumn</p>
+                                            <h2>Modern with Classic</h2>
                                         </a>
                                     </div>
                                     <div class="side_pagination swiper-pagination pc-only"></div>
@@ -561,7 +567,7 @@
                                             </div>
                                         </div>
                                         <!-- campaign 13 -->
-                                        <div class="swiper-slide" data-shifted-classic>
+                                        <div class="swiper-slide" data-classic>
                                             <div class="campaign_items">
                                                 <picture class="campaign_picture">
                                                     <source media="(max-width: 1023px)"
@@ -672,7 +678,7 @@
                                             </div>
                                         </div>
                                         <!-- campaign 14 -->
-                                        <div class="swiper-slide" data-shifted-classic>
+                                        <div class="swiper-slide" data-classic>
                                             <div class="campaign_items">
                                                 <picture class="campaign_picture">
                                                     <source media="(max-width: 1023px)"
@@ -739,7 +745,7 @@
                                             </div>
                                         </div>
                                         <!-- campaign 15 -->
-                                        <div class="swiper-slide" data-shifted-classic>
+                                        <div class="swiper-slide" data-classic>
                                             <div class="campaign_items">
                                                 <picture class="campaign_picture">
                                                     <source media="(max-width: 1023px)"
@@ -806,7 +812,7 @@
                                             </div>
                                         </div>
                                         <!-- campaign 16 -->
-                                        <div class="swiper-slide" data-shifted-classic>
+                                        <div class="swiper-slide" data-classic>
                                             <div class="campaign_items">
                                                 <picture class="campaign_picture --medium">
                                                     <source media="(max-width: 1023px)"
