--- a/index.html
+++ b/index.html
@@ -802,6 +802,38 @@
                                                     </svg>
                                                 </div>
                                                 <div class="popup_inner">
+                                                    <p class="popup_direction">LEFT_</p>
+                                                    <ul class="popup_list">
+                                                        <li>
+                                                            <h2 class="item-name">
+                                                                Shirt ¥16,940 / <br class="sp-only" />
+                                                                SHIPS
+                                                            </h2>
+                                                            <a href="#">Buy</a>
+                                                        </li>
+                                                        <li>
+                                                            <h2 class="item-name">
+                                                                Camisole ¥17,600 / <br class="sp-only" />
+                                                                Uhr
+                                                            </h2>
+                                                            <a href="#" class="--disable">Buy</a>
+                                                        </li>
+                                                        <li>
+                                                            <h2 class="item-name">
+                                                                Short Pants ¥37,400 / <br class="sp-only" />
+                                                                BAUM UND PFERDGARTEN
+                                                            </h2>
+                                                            <a href="#">Buy</a>
+                                                        </li>
+                                                        <li>
+                                                            <h2 class="item-name">
+                                                                Necklace ¥4,400 / <br class="sp-only" />
+                                                                GRACE FASHION ACCESSORIES
+                                                            </h2>
+                                                            <a href="#" class="--disable">Buy</a>
+                                                        </li>
+                                                    </ul>
+                                                    <p class="popup_direction">RIGHT_</p>
                                                     <ul class="popup_list">
                                                         <li>
                                                             <h2 class="item-name">
